5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1831_3182.log
== TEST (2019-06-13 16:32:50) 
-- CODE:
from numpy import *
a = array(eval(input("vetor: ")))
b zeros(size(a),dtype=int)
d=size(a)
for i in range(size(a)):
	b[i] = a[d]
	d = d - 1
print(b)
	
-- ERROR:
File "XXXX", line 3
    b zeros(size(a),dtype=int)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:47:25) 
-- CODE:
from numpy import *
a = array(eval(input("vetor: ")))
b zeros(size(a),dtype=int)
d=size(a)
for i in range(size(a)):
	b[i] = a[d]
	d = d - 1 - i
print(b)
-- ERROR:
File "XXXX", line 3
    b zeros(size(a),dtype=int)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:47:38) 
-- CODE:
from numpy import *
a = array(eval(input("vetor: ")))
b zeros(size(a),dtype=int)
d=size(a)
for i in range(size(a)):
	b[i] = a[d]
	d = d - 1 - i
print(b)
-- ERROR:
File "XXXX", line 3
    b zeros(size(a),dtype=int)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:47:51) 
-- CODE:
from numpy import *
a = array(eval(input("vetor: ")))
b = zeros(size(a),dtype=int)
d=size(a)
for i in range(size(a)):
	b[i] = a[d]
	d = d - 1 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:49:07) 
-- CODE:
from numpy import *
a = array(eval(input("vetor: ")))
b = zeros(size(a),dtype=int)
d=size(a)
for i in range(size(a)):
	b[i] = a[d-1]
	d = d - 1 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:53:28) 
-- CODE:
from numpy import *
a = array(eval(input("vetor: ")))
b = zeros(size(a),dtype=int)
d=size(a)
for i in range(size(a)):

-- ERROR:
File "XXXX", line 6
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
